  .----------------------.
--|   X-Chat ChangeLog   |--------------------------------------------
  `----------------------'

----------------------------------------------------------------------
 2.0.9
----------------------------------------------------------------------

 - Updated translations (cs, de, en_GB, eu, ru, uk, wa).
 - DCC IP address can now be a hostname too (Flavio Chierichetti)
   [773229].
 - Don't try random DCC ports when a range is set (mib) [889987].
 - Fix: Spurious nick completion (mib) [916944].
 - Serverlist passwd box is now masked (Cristian Peraferrer) [920113].
 - Fix: Sometimes messes up the tab order on reconnect (Gabor Szeder)
   [941773].
 - Fix: Crashes when setting CHARSET to non-existant charset [945855].
 - Added some fields to the "channels" list for the plugin API.
 - 
 - 


----------------------------------------------------------------------
 2.0.8
----------------------------------------------------------------------

 - Updated translations (az, es, fi, lt, mk, nl, ru, sk, sl, sr, sv,
   zh_CN).
 - Added color, flash and iconify args to /GUI command (this is for
   use in scripts and plugins only).
 - Plugin API: Added "notify" list.
 - Plugin API: Added id, users, flags fields for "channels" list.
 - Win32: Better error messages for file i/o and winsock errors.
 - New Perl interface (with backward compatibility)! (Lian Situ).
 - Fixed command-character buglet [873541].
 - Win32: Improved incorrect CPS display for file transfers.
 - Added "Copy Selected URL" option to URL popupmenu (Mike Battersby).
 - Added work-around for "Get my IP from server" not working on PTNet
   (Mario Freitas).
 - Fixed: Alt+numbers do not work with X Input Method [896968] (Marius
   Gedminas).
 - Added support for "+port" to indicate SSL connections.
 - Fixed non-ASCII chars in time-stamp bug [918445].
 - Smaller bug fixes: [870073] [890891].


----------------------------------------------------------------------
 2.0.7